add update chore and adding/removing assignees
